[gd_scene load_steps=4 format=3 uid="uid://11unecbkqogj"]

[ext_resource type="Script" path="res://Game/Victory/victory.gd" id="1_bt4go"]
[ext_resource type="Texture2D" uid="uid://cfff4xbh3gu78" path="res://Assets/Art/Screens/Buttons/Play Again Button.png" id="2_38utl"]
[ext_resource type="Texture2D" uid="uid://c3elhf4kle52q" path="res://Assets/Art/Screens/Buttons/Quit Button.png" id="3_w42ft"]

[node name="Victory" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 64.0
offset_top = 40.0
offset_right = 64.0
offset_bottom = 40.0
script = ExtResource("1_bt4go")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -64.0
offset_top = -40.0
offset_right = 1216.0
offset_bottom = 680.0

[node name="Play Again" type="TextureButton" parent="."]
layout_mode = 2
offset_left = 456.0
offset_top = 291.0
offset_right = 1056.0
offset_bottom = 595.0
scale = Vector2(0.4, 0.4)
texture_normal = ExtResource("2_38utl")

[node name="Quit" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 456.0
offset_top = 413.0
offset_right = 1056.0
offset_bottom = 717.0
scale = Vector2(0.4, 0.4)
texture_normal = ExtResource("3_w42ft")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 320.0
offset_top = 192.0
offset_right = 832.0
offset_bottom = 291.0

[node name="VictoryLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Victory!"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Play Again" to="." method="_on_play_again_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
